--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,8 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
+      "run_at": "document_idle",
       "js": ["./main.js"]
     }
-  ],
-  "action": {
-    "default_popup": "popup.html"
-  }
+  ]
 }
